<resources>
    <string name="app_name">W04_28917</string>
    <string name="mainActivity">Main Activity</string>

    <string name="hintText">Teks yang akan dikirim</string>
    <string name="warningText">Teks wajib diisi</string>
    <string name="hintUrl">Masukkan link website</string>
    <string name="warningUrl">Link website wajib diisi</string>
    <string name="txSend">Kirim</string>
    <string name="txBrowse">Browse</string>

    <string name="hintText2">Masukkan teks</string>
    <string name="btnChangeText">Ganti Teks</string>
    <string name="tvInitialText">Initial TextView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvPageOne">Halaman 1 - Static Fragment</string>
    <string name="tvPageTwo">Halaman 2 - Dynamic Fragment</string>
</resources>